# weggli

./: .gitignore  Cargo.toml  README.md
benches/: examples.rs
fuzz/fuzz_targets/: fuzz_query.rs
src/: builder.rs  lib.rs  main.rs  query.rs  result.rs
