[package]
name = "wegglix"
version = "0.2.5"
authors = ["fwilhelm"]
edition = "2021"
license = "Apache-2.0"
description = "weggli is a fast and robust semantic search tool for C and C++ codebases. It is designed to help security researchers identify interesting functionality in large codebases."
repository = "https://github.com/weggli-rs/weggli"
rust-version = "1.63.0"

[dependencies]
colored = "2"
log = "0.4"
rayon = "1.10"
regex = "1"
rustc-hash = "2"
streaming-iterator = "0.1"
thiserror = "1"
thread_local = "1.1"
tree-sitter = "0.24"

[build-dependencies]
cc = "1"

[dev-dependencies]
criterion = { version = "0.3", features = ["html_reports"] }
assert_cmd = "2.0.0"
predicates = "1"

[[bench]]
name = "examples"
harness = false
